--- a/css/style.css
+++ b/css/style.css
@@ -1,217 +1,162 @@
-body{
-
- margin:0px;
-
+body {
+  margin: 0px;
 }
 
-.header{
+.header {
+  background: #1f2937;
+  width: 100%;
+  padding: 0px 0px 70px 0px;
+  margin: 0;
 
-  background:#1F2937 ;
-  width:100%;
-  padding:0px 0px 70px 0px;
-  margin:0;
-
-  border:0px;
-
+  border: 0px;
 }
 
 .headerContent {
+  display: flex;
+  color: white;
+  margin: 0px 4%;
 
-   display:flex;
-   color:white;
-   margin:0px 4%;
-   		
-   justify-content:space-between;
-   align-items:center;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  }
-
-a{
-
-  
-  font-size:18px ;
-  color:#E5E7EB ;
-  margin:0px 5px ;
+a {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin: 0px 5px;
   text-decoration: none;
-
- }
-
-.hdr1{
-
-  padding:20px 0px 100px 0px;
-
 }
 
-.headerLogo{
+.hdr1 {
+  padding: 20px 0px 100px 0px;
+}
 
-  color:#F9FAF8;
-  font-size:24px;
+.headerLogo {
+  color: #f9faf8;
+  font-size: 24px;
+}
 
-  }
+.awesome {
+  color: #f9f8fa;
+  font-size: 48px;
+}
 
-.awesome{
-
-   color:#F9F8FA;
-   font-size:48px;
-
-  }
-
-button{
-
-  background:#3882F6;
-  font-size:18px ;
-  border-radius:5px;
-  border:none;
-  padding:8px 24px;
+button {
+  background: #3882f6;
+  font-size: 18px;
+  border-radius: 5px;
+  border: none;
+  padding: 8px 24px;
   margin: 30px 0px 0px 0px;
-
 }
 
-.pageImage{
+.pageImage {
+  width: 100%;
+  height: 300px;
+  border: 1px solid black;
+  background: gray;
+}
 
-  width:100%;
-  height:300px;
-  border: 1px solid black ;
-  background: gray ;
-  
+.randomInfo {
+  text-align: center;
+  font-weight: 900;
+  font-size: 30px;
+}
 
-  }
+.randImgGrp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.randomInfo{
+.randImg {
+  width: 150px;
+  height: 150px;
+  border: 3px solid blue;
+  border-radius: 10px;
+  background: white;
+  max-width: 20vw;
+  margin: 0px 5px;
+}
 
-   text-align:center;
-   font-weight:900;
-   font-size:30px;
+.randImgText {
+  text-align: center;
+  width: 150px;
+  height: 150px;
+  max-width: 20vw;
+  font-size: 18px;
+}
 
-  }
+.quoteCont {
+  background: #e5e7eb;
 
-.randImgGrp{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  display:flex;
-  justify-content:center;
-  align-items:center;
-   }
+.quoteCover {
+  width: 70vw;
+}
 
-.randImg{
+.dQuote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+  color: #1f2937;
+}
 
-   width:150px;
-   height:150px;
-   border:3px solid  blue ;
-   border-radius:10px;
-   background: white;
-   max-width:20vw;
-   margin:0px 5px ;
+.quotee {
+  text-align: right;
+  font-weight: 800;
+}
 
-   }
+.cta1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-
-.randImgText{
-
-  text-align:center;
-   width:150px;
-   height:150px;
-   max-width:20vw;
-   font-size:18px;
-    }
-
-.quoteCont{
-  
-  background: #E5E7EB;
-  
-  display:flex;
-  justify-content:center;
-  align-items:center;  
-
-    }
-
-.quoteCover{
-
-  width:70vw;
-
-   }
-
-.dQuote{
-
-   font-size:36px;
-   font-style: italic;
-   font-weight: lighter;
-   color:#1F2937;
-
-  }
-
-.quotee{
-
-    text-align:right;
-    font-weight: 800;
-
-  }
-
-
-.cta1{
-
-   
-  display:flex;
-  justify-content:center;
-  align-items:center;  
-  
-
-  }
-
-.cta2{
-
+.cta2 {
   border-radius: 10px;
   border: none;
-  color:white;
-  display:flex;
-  justify-content:center;
-  align-items:center;  
-   background: #3882F6;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #3882f6;
   padding: 40px;
-  margin:70px 0px;
-  width: 70vw ;
+  margin: 70px 0px;
+  width: 70vw;
+}
 
-   }
-
-.cta6{
-  
-  color:white;
+.cta6 {
+  color: white;
   border-radius: 5px;
   border: 2px solid white;
   margin-left: 50px;
   margin-top: 0px;
-  
+}
 
-  }
-
-
-.cta3{
-
+.cta3 {
   font-weight: 800;
   font-size: 18px;
-   margin-bottom:0px;
+  margin-bottom: 0px;
+}
 
-   }
-
-.cta4{
-   
+.cta4 {
   font-weight: 100;
   font-size: 13px;
-  margin-top:0px;
+  margin-top: 0px;
+}
 
-   }
+.myCopyCont {
+  background: #1f2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-
-.myCopyCont{
-
-  background:#1F2937 ;
-  display:flex;
-  justify-content:center;
-  align-items:center;  
-
-   }
-
-.myCopy{
-
-  color:white ;
-  
-   }
+.myCopy {
+  color: white;
+}
